# timstofu

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
__dev/: bitshifting.py  clustering.py  dealing_with_clusters.py  debugging_deduplication.py  debugging_lack_of_sorting.py  deduplication_with_memmap.py  from_df_removing_memmapped_arrays.py  full_3D_clustering.py  merging_datasets.py  numpy_nonsense.py  obsoleting.py  partial_index_building.py  reading_tdf.py  scoring_of_clusters_analysis.py  simply_one_array.py  testing_best_input_size_for_prange.py  tof_urt_index_based_method.py  visualizing.py
__dev/alternatives/: kdtrees.py
__dev/simpletest/: numba_variadic_array_inputs.py
__dev/vis/: matplotlib.py  plotly.py  pyvista_vis.py
examples/: deduplication_from_clusters_using_mmap.py  lex_sorted_clusters_from_data_frame.py
src/timstofu/: get_data_in_project_example.py  itertools.py  math.py  memmapped_tofu.py  misc.py  mmapuccino.py  numba_helper.py  pivot.py  plotting.py  sort.py  sort_and_pepper.py  sort_array_ops.py  stats.py  timstofmisc.py  tofu.py  top_k.py  windowing.py
